[package]
name = "mac-telnet"
version = "0.1.0"
edition = "2021"
authors = ["Lucas Jahier"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
pnet = "0.35"
crossterm = "0.29"
rand = "0.9"
srp = "0.6"
thiserror = "1.0"
byteorder = "1.5"
tokio = { version = "1.44", features = ["full"] }
sha2 = "0.10"
num-bigint = "0.4"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
hmac = "0.12.1"
